add controller and view for results page

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,5 +1,5 @@
-<%= button_to 'Where to Eat', results_path %>
+<%= button_to 'Where to Eat', results_path, method: :get %>
 
 
 <p>Much like your palate, would you like to refine your search?</p>
-<%= button_to 'Login with Google', '/auth/google_oath2/callback' %>
+<%= button_to 'Login with Google', '/auth/google_oath2/callback'%>
