--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -1,7 +1,19 @@
-<% @restaurants.each_with_index do |r,i|%>
-  <div id="restuarant_<% i + 1 %>">
-    <%= r.name%>
-    <%= r.location %>
-    <br>
+<% @restaurants.first(3).each_with_index do |restaurant, index|%>
+  <div id="restaurant_<%= index + 1 %>">
+    <%= image_tag(restaurant.image_url, id: "image_#{restaurant.id}") %>
+    <h3><%= restaurant.name %></h3>
+    <%if restaurant.is_closed == false%>
+      <p>Open Now</p>
+    <% else %>
+      <p>Closed</p>
+    <% end %>
+    <p>Address: <%= restaurant.location.to_sentence %></p>
+    <p>Rating: <%= restaurant.rating %> out of 5</p>
+    <p>Number of Reviews: <%= restaurant.review_count %></p>
+    <p>Categories: <%= restaurant.categories.to_sentence %></p>
+    <p>Offers <%= restaurant.transactions.to_sentence %></p>
+    <p>Address: <%= restaurant.location.first %> <%= restaurant.location.second %></p>
+    <p>Phone: <%= restaurant.display_phone %></p>
+    <p>Distance: <%= restaurant.distance %></p>
   </div>
 <% end %>
