--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,3 +1,19 @@
 <%= @user_email %>
 <br>
 <br>
+
+<%= form_with url: results_path, method: :get, local: true do |f| %>
+  <%= f.label :radius, 'Proximity in miles' %>
+  <%= f.select :radius, ['1', '5', '10', '20'], :include_blank => true %><br>
+
+  <%= f.label :price, 'Price' %>
+  <%= f.range_field :price, :min=>1, :max=>5 %><br>
+
+  <%= f.label :open_now, 'Open Now?' %>
+  <%= f.check_box :open_now, {}, true, false %><br>
+
+  <%= f.label :transactions, 'Transactions' %>
+  <%= f.select :transactions, ['Dine In', 'Pick Up', 'Delivery', 'Reservations'] %><br>
+
+  <%= f.submit "Find Me Food" %>
+<% end %>
