add tests, filters, and methods for users to filter results to returned refined results.

--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -9,6 +9,7 @@
       <p>Closed</p>
     <% end %>
     <p>Address: <%= restaurant.location.to_sentence %></p>
+    <p>Price: <%= restaurant.price %></p>
     <p>Rating: <%= restaurant.rating %> out of 5</p>
     <p>Number of Reviews: <%= restaurant.review_count %></p>
     <p>Categories: <%= restaurant.categories.to_sentence %></p>
