--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -108,6 +108,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-bottom: 0.5rem;
   font-weight: 700;
   line-height: 1.2;
+  color: #343a40;
 }
 
 h1, .h1 {
@@ -11515,7 +11516,7 @@ footer.footer .social-link:hover {
   z-index: 1;
 }
 .portfolio-item .caption .caption-content {
-  color: #fff;
+  color: #343a40;
   margin: auto 2rem 2rem;
 }
 .portfolio-item .caption .caption-content h2, .portfolio-item .caption .caption-content .h2 {
@@ -11551,15 +11552,15 @@ footer.footer .social-link:hover {
     -webkit-clip-path: inset(-1px);
             clip-path: inset(-1px);
   }
-  .portfolio-item:hover img {
-    -webkit-clip-path: inset(2rem);
-            clip-path: inset(2rem);
-  }
-  .portfolio-item:hover .caption {
-    background-color: rgba(29, 128, 159, 0.9);
-    -webkit-clip-path: inset(2rem);
-            clip-path: inset(2rem);
-  }
+  // .portfolio-item:hover img {
+  //   -webkit-clip-path: inset(2rem);
+  //           clip-path: inset(2rem);
+  // }
+  // .portfolio-item:hover .caption {
+  //   background-color: rgba(29, 128, 159, 0.9);
+  //   -webkit-clip-path: inset(2rem);
+  //           clip-path: inset(2rem);
+  // }
 }
 
 .service-icon {
