finish writing tests for links and features
Co-authored-by: Taryn Orlemann <torlemann@users.noreply.github.com>
Co-authored-by: Rebecka Hendricks <rebeckahendricks@users.noreply.github.com>
Co-authored-by: Thomas Hayes <thayes87@users.noreply.github.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <div class="bg-warning"><% flash.each do |type, message| %>
+      <p id="flash_message"> <%= message %></p>
+    <% end %>
+    </div>
     <%= yield %>
   </body>
 
