--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -36,7 +36,7 @@
                             <div><b>Phone:</b> <%= restaurant.display_phone %></div>
                             <div><b>Distance:</b> <%= restaurant.distance %> miles<div>
                             </p>
-                            <%= button_to 'Shuffle', results_shuffle_path(@restaurants), method: :get, :class => "btn btn-dark btn-xl"  %>
+                            <%= button_to 'Shuffle', results_shuffle_path, method: :get, :class => "btn btn-dark btn-xl"  %>
                       </div>
                   </div>
                 </div>
